# Codio_blango

./: data.json  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
blango/: settings.py  urls.py
blango/templates/: base.html
blango/templates/blog/: index.html  post-comments.html  post-detail.html
blango_auth/: admin.py  forms.py  models.py
blango_auth/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
blog/: admin.py  api_views.py  forms.py  models.py  test_post_api.py  test_tag_api.py  views.py
blog/api/: permissions.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_comment_created_at_comment_modified_at.py  0004_alter_post_published_at.py  0005_alter_comment_object_id_alter_post_created_at.py  0006_authorprofile.py  0007_alter_authorprofile_user.py  0008_alter_post_slug.py  0009_alter_tag_value.py
blog/templatetags/: blog_extras.py
