[tool.poetry]
name = "blango"
version = "0.1.0"
description = ""
authors = ["Stanislav <goncharuk.sm@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/StanleyOneG/Codio_blango"

[tool.poetry.dependencies]
python = "^3.10"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asgiref = "3.5.2"
astroid = "2.12.13"
asttokens = "2.2.1"
backcall = "0.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
colorama = "0.4.6"
confusable-homoglyphs = "3.2.0"
coreapi = "2.3.3"
coreschema = "0.0.4"
coverage = "6.5.0"
crispy-bootstrap5 = "0.7"
cryptography = "39.0.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.6"
dj-database-url = "1.2.0"
django = "4.1.4"
django-allauth = "0.52.0"
django-configurations = "2.4"
django-crispy-forms = "1.14.0"
django-registration = "3.3"
django-debug-toolbar = "3.8.1"
djangorestframework = "3.14.0"
drf-yasg = "1.21.4"
executing = "1.2.0"
idna = "3.4"
inflection = "0.5.1"
ipython = "8.8.0"
isort = "5.11.2"
itypes = "1.2.0"
jedi = "0.18.2"
jinja2 = "3.1.2"
lazy-object-proxy = "1.8.0"
markupsafe = "2.1.2"
matplotlib-inline = "0.1.6"
mccabe = "0.7.0"
nose = "1.3.7"
oauthlib = "3.2.2"
packaging = "23.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pinocchio = "0.4.3"
platformdirs = "2.6.0"
prompt-toolkit = "3.0.36"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pycparser = "2.21"
pygments = "2.14.0"
pyjwt = "2.6.0"
pylint = "2.15.8"
python3-openid = "3.2.0"
pytz = "2022.7.1"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.7"
six = "1.16.0"
sqlparse = "0.4.3"
stack-data = "0.6.2"
tomli = "2.0.1"
tomlkit = "0.11.6"
traitlets = "5.8.1"
typing-extensions = "4.4.0"
uritemplate = "4.1.1"
urllib3 = "1.26.14"
wcwidth = "0.2.5"
wrapt = "1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
